btsk-83: 서비스 계층 리팩토링 및 아키텍처 개선
이번 커밋은 코드 리뷰 피드백을 반영하여 서비스 계층의 과도한 책임을 분리하고, DDD 및 계층형 아키텍처 원칙을 적용하여 코드의 품질을 개선하는 데 중점을 두었습니다. N+1 쿼리, 동시성 문제 등 잠재적인 이슈들을 해결하여 안정성을 높였습니다.

1. DDD 및 SRP 원칙에 따라 서비스 로직을 리팩토링했습니다.
2. 오답 노트 조회 및 등록 시 발생 가능한 N+1 및 동시성 문제를 해결했습니다.
3. 계층형 아키텍처의 의존성 규칙을 준수하도록 DTO 변환 로직을 수정했습니다.
4. LLM 클라이언트의 요청 생성 책임을 별도의 값 객체로 분리했습니다.
5. 포트-어댑터 패턴에 누락된 리포지토리 메서드를 추가했습니다.
6. LLM 프롬프트에 한국어 출력 지시사항을 명시했습니다.
7. Checkstyle 코드 컨벤션 경고를 수정했습니다.