@@ -1,10 +1,9 @@
 package kr.it.pullit.modules.wronganswer.service;
 
-import java.util.ArrayList;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 import kr.it.pullit.modules.learningsource.source.domain.entity.Source;
-import kr.it.pullit.modules.learningsource.sourcefolder.domain.entity.SourceFolder;
 import kr.it.pullit.modules.member.api.MemberPublicApi;
 import kr.it.pullit.modules.member.domain.entity.Member;
 import kr.it.pullit.modules.questionset.api.QuestionPublicApi;
@@ -13,6 +12,7 @@ import kr.it.pullit.modules.questionset.domain.entity.QuestionSet;
 import kr.it.pullit.modules.wronganswer.api.WrongAnswerPublicApi;
 import kr.it.pullit.modules.wronganswer.domain.entity.WrongAnswer;
 import kr.it.pullit.modules.wronganswer.repository.WrongAnswerRepository;
+import kr.it.pullit.modules.wronganswer.service.dto.WrongAnswerSetDto;
 import kr.it.pullit.modules.wronganswer.web.dto.WrongAnswerSetResponse;
 import kr.it.pullit.shared.paging.dto.CursorPageResponse;
 import lombok.RequiredArgsConstructor;
@@ -34,59 +34,85 @@ public class WrongAnswerService implements WrongAnswerPublicApi {
   @Transactional(readOnly = true)
   public CursorPageResponse<WrongAnswerSetResponse> getMyWrongAnswers(
       Long memberId, Long cursor, int size) {
-    Pageable pageableWithOneExtra = PageRequest.of(0, size + 1);
-    List<Object[]> rawResults =
-        wrongAnswerRepository.findWrongAnswerQuestionSetWithCursor(
-            memberId, cursor, pageableWithOneExtra);
+    List<WrongAnswerSetDto> results = fetchWrongAnswerSets(memberId, cursor, size);
 
-    boolean hasNext = rawResults.size() > size;
-    List<WrongAnswerSetResponse> content =
-        rawResults.stream().limit(size).map(this::mapToDto).collect(Collectors.toList());
-
-    Long nextCursor =
-        hasNext && !content.isEmpty() ? extractCursorFrom(rawResults.get(size - 1)) : null;
+    boolean hasNext = results.size() > size;
+    List<WrongAnswerSetResponse> content = toContent(results, size);
+    Long nextCursor = calculateNextCursor(results, size, hasNext);
 
     return CursorPageResponse.of(content, nextCursor, hasNext);
   }
 
-  private Long extractCursorFrom(Object[] result) {
-    QuestionSet questionSet = (QuestionSet) result[0];
-    return questionSet.getId();
+  private List<WrongAnswerSetDto> fetchWrongAnswerSets(Long memberId, Long cursor, int size) {
+    Pageable pageableWithOneExtra = PageRequest.of(0, size + 1);
+    return wrongAnswerRepository.findWrongAnswerSetWithCursor(
+        memberId, cursor, pageableWithOneExtra);
   }
 
-  @Override
-  @Transactional(readOnly = true)
-  public List<WrongAnswerSetResponse> getAllMyWrongAnswers(Long memberId) {
-    List<Object[]> results =
-        wrongAnswerRepository.findAllWrongAnswerQuestionSetAndCountByMemberId(memberId);
+  private List<WrongAnswerSetResponse> toContent(List<WrongAnswerSetDto> results, int size) {
+    return results.stream().limit(size).map(this::toResponse).collect(Collectors.toList());
+  }
 
-    return results.stream().map(this::mapToDto).collect(Collectors.toList());
+  // TODO: 카테고리 추가 필요.
+  private WrongAnswerSetResponse toResponse(WrongAnswerSetDto dto) {
+    QuestionSet questionSet = dto.questionSet();
+    List<String> sourceNames =
+        questionSet.getSources().stream().map(Source::getOriginalName).toList();
+
+    return WrongAnswerSetResponse.of(
+        questionSet.getId(),
+        questionSet.getTitle(),
+        sourceNames,
+        questionSet.getDifficulty(),
+        questionSet.getTitle(),
+        dto.count(),
+        null);
+  }
+
+  private Long calculateNextCursor(List<WrongAnswerSetDto> results, int size, boolean hasNext) {
+    if (!hasNext) {
+      return null;
+    }
+    return results.get(size - 1).lastWrongAnswerId();
   }
 
   @Override
   public void markAsWrongAnswers(Long memberId, List<Long> questionIds) {
-    List<WrongAnswer> wrongAnswers = new ArrayList<>();
-
-    for (Long questionId : questionIds) {
-      if (wrongAnswerRepository.findByMemberIdAndQuestionId(memberId, questionId).isPresent()) {
-        continue;
-      }
-
-      Member member =
-          memberPublicApi
-              .findById(memberId)
-              .orElseThrow(() -> new IllegalArgumentException("Member not found"));
-      Question question =
-          questionPublicApi
-              .findEntityById(questionId)
-              .orElseThrow(() -> new IllegalArgumentException("Question not found"));
-
-      wrongAnswers.add(new WrongAnswer(member, question));
+    if (questionIds == null || questionIds.isEmpty()) {
+      return;
     }
 
-    if (!wrongAnswers.isEmpty()) {
-      wrongAnswerRepository.saveAll(wrongAnswers);
+    Member member = findMemberById(memberId);
+    List<Question> questions = questionPublicApi.findEntitiesByIds(questionIds);
+    Set<Long> existingWrongAnswerQuestionIds =
+        findExistingWrongAnswerQuestionIds(memberId, questionIds);
+
+    List<WrongAnswer> newWrongAnswers =
+        createNewWrongAnswers(member, questions, existingWrongAnswerQuestionIds);
+
+    if (!newWrongAnswers.isEmpty()) {
+      wrongAnswerRepository.saveAll(newWrongAnswers);
     }
+  }
+
+  private Member findMemberById(Long memberId) {
+    return memberPublicApi
+        .findById(memberId)
+        .orElseThrow(() -> new IllegalArgumentException("요청한 회원 ID를 찾을 수 없습니다: " + memberId));
+  }
+
+  private Set<Long> findExistingWrongAnswerQuestionIds(Long memberId, List<Long> questionIds) {
+    return wrongAnswerRepository.findByMemberIdAndQuestionIdIn(memberId, questionIds).stream()
+        .map(wrongAnswer -> wrongAnswer.getQuestion().getId())
+        .collect(Collectors.toSet());
+  }
+
+  private List<WrongAnswer> createNewWrongAnswers(
+      Member member, List<Question> questions, Set<Long> existingIds) {
+    return questions.stream()
+        .filter(question -> !existingIds.contains(question.getId()))
+        .map(question -> new WrongAnswer(member, question))
+        .collect(Collectors.toList());
   }
 
   @Override
@@ -100,28 +126,13 @@ public class WrongAnswerService implements WrongAnswerPublicApi {
     }
   }
 
-  private WrongAnswerSetResponse mapToDto(Object[] result) {
-    QuestionSet questionSet = (QuestionSet) result[0];
-    long incorrectCount = (long) result[1];
+  @Override
+  @Transactional(readOnly = true)
+  public List<WrongAnswerSetResponse> getAllMyWrongAnswers(Long memberId) {
 
-    String category =
-        questionSet.getSources().stream()
-            .findFirst()
-            .map(Source::getSourceFolder)
-            .map(SourceFolder::getName)
-            .orElse("미분류");
+    List<WrongAnswerSetDto> results =
+        wrongAnswerRepository.findAllWrongAnswerSetAndCountByMemberId(memberId);
 
-    return WrongAnswerSetResponse.builder()
-        .questionSetId(questionSet.getId())
-        .questionSetTitle(questionSet.getTitle())
-        .sourceNames(
-            questionSet.getSources().stream()
-                .map(Source::getOriginalName)
-                .collect(Collectors.toList()))
-        .difficulty(questionSet.getDifficulty())
-        .majorTopic("미구현")
-        .incorrectCount((int) incorrectCount)
-        .category(category)
-        .build();
+    return results.stream().map(this::toResponse).collect(Collectors.toList());
   }
 }
